templates/grouparoo-stack-created-via-docker-integration.yaml
AWSTemplateFormatVersion: 2010-09-09
Resources:
  CloudMap:
    Properties:
      Description: Service Map for Docker Compose project grp
      Name: grp.local
      Vpc: vpc-e57f9198
    Type: AWS::ServiceDiscovery::PrivateDnsNamespace
  Cluster:
    Properties:
      ClusterName: grp
      Tags:
        - Key: com.docker.compose.project
          Value: grp
    Type: AWS::ECS::Cluster
  DbService:
    DependsOn:
      - PostgresdataNFSMountTargetOnSubnetf55b8993
      - PostgresdataNFSMountTargetOnSubnet1aa07e45
      - PostgresdataNFSMountTargetOnSubnet93e931b2
      - PostgresdataNFSMountTargetOnSubnet613ddc50
      - PostgresdataNFSMountTargetOnSubnet6075182d
      - PostgresdataNFSMountTargetOnSubnet38fa6d36
    Properties:
      Cluster:
        Fn::GetAtt:
          - Cluster
          - Arn
      DeploymentConfiguration:
        MaximumPercent: 200
        MinimumHealthyPercent: 100
      DeploymentController:
        Type: ECS
      DesiredCount: 1
      LaunchType: FARGATE
      NetworkConfiguration:
        AwsvpcConfiguration:
          AssignPublicIp: ENABLED
          SecurityGroups:
            - Ref: GrouparoobackendNetwork
          Subnets:
            - subnet-f55b8993
            - subnet-1aa07e45
            - subnet-93e931b2
            - subnet-613ddc50
            - subnet-6075182d
            - subnet-38fa6d36
      PlatformVersion: 1.4.0
      PropagateTags: SERVICE
      SchedulingStrategy: REPLICA
      ServiceRegistries:
        - RegistryArn:
            Fn::GetAtt:
              - DbServiceDiscoveryEntry
              - Arn
      Tags:
        - Key: com.docker.compose.project
          Value: grp
        - Key: com.docker.compose.service
          Value: db
      TaskDefinition:
        Ref: DbTaskDefinition
    Type: AWS::ECS::Service
  DbServiceDiscoveryEntry:
    Properties:
      Description: '"db" service discovery entry in Cloud Map'
      DnsConfig:
        DnsRecords:
          - TTL: 60
            Type: A
        RoutingPolicy: MULTIVALUE
      HealthCheckCustomConfig:
        FailureThreshold: 1
      Name: db
      NamespaceId:
        Ref: CloudMap
    Type: AWS::ServiceDiscovery::Service
  DbTaskDefinition:
    Properties:
      ContainerDefinitions:
        - Command:
            - us-east-1.compute.internal
            - grp.local
          Essential: false
          Image: docker/ecs-searchdomain-sidecar:1.0
          LogConfiguration:
            LogDriver: awslogs
            Options:
              awslogs-group:
                Ref: LogGroup
              awslogs-region:
                Ref: AWS::Region
              awslogs-stream-prefix: grp
          Name: Db_ResolvConf_InitContainer
        - DependsOn:
            - Condition: SUCCESS
              ContainerName: Db_ResolvConf_InitContainer
          Environment:
            - Name: POSTGRES_DB
              Value: grouparoo_docker
            - Name: POSTGRES_PASSWORD
              Value: password
          Essential: true
          Image: docker.io/library/postgres:latest@sha256:2b87b5bb55589540f598df6ec5855e5c15dd13628230a689d46492c1d433c4df
          LinuxParameters: {}
          LogConfiguration:
            LogDriver: awslogs
            Options:
              awslogs-group:
                Ref: LogGroup
              awslogs-region:
                Ref: AWS::Region
              awslogs-stream-prefix: grp
          MountPoints:
            - ContainerPath: /var/lib/postgresql/data
              SourceVolume: postgres-data
          Name: db
      Cpu: "256"
      ExecutionRoleArn:
        Ref: DbTaskExecutionRole
      Family: grp-db
      Memory: "512"
      NetworkMode: awsvpc
      RequiresCompatibilities:
        - FARGATE
      TaskRoleArn:
        Ref: DbTaskRole
      Volumes:
        - EFSVolumeConfiguration:
            AuthorizationConfig:
              AccessPointId:
                Ref: PostgresdataAccessPoint
              IAM: ENABLED
            FilesystemId: fs-807d0c34
            TransitEncryption: ENABLED
          Name: postgres-data
    Type: AWS::ECS::TaskDefinition
  DbTaskExecutionRole:
    Properties:
      AssumeRolePolicyDocument:
        Statement:
          - Action:
              - sts:AssumeRole
            Condition: {}
            Effect: Allow
            Principal:
              Service: ecs-tasks.amazonaws.com
        Version: 2012-10-17
      ManagedPolicyArns:
        - arn:aws:iam::aws:policy/service-role/AmazonECSTaskExecutionRolePolicy
        - arn:aws:iam::aws:policy/AmazonEC2ContainerRegistryReadOnly
      Tags:
        - Key: com.docker.compose.project
          Value: grp
        - Key: com.docker.compose.service
          Value: db
    Type: AWS::IAM::Role
  DbTaskRole:
    Properties:
      AssumeRolePolicyDocument:
        Statement:
          - Action:
              - sts:AssumeRole
            Condition: {}
            Effect: Allow
            Principal:
              Service: ecs-tasks.amazonaws.com
        Version: 2012-10-17
      Policies:
        - PolicyDocument:
            Statement:
              - Action:
                  - elasticfilesystem:ClientMount
                  - elasticfilesystem:ClientWrite
                  - elasticfilesystem:ClientRootAccess
                Condition:
                  StringEquals:
                    elasticfilesystem:AccessPointArn:
                      Ref: PostgresdataAccessPoint
                Effect: Allow
                Principal: {}
                Resource:
                  - arn:aws:elasticfilesystem:us-east-1:372536106890:file-system/fs-807d0c34
            Version: 2012-10-17
          PolicyName: DbPostgresdataVolumeMountPolicy
      Tags:
        - Key: com.docker.compose.project
          Value: grp
        - Key: com.docker.compose.service
          Value: db
    Type: AWS::IAM::Role
  DefaultNetwork:
    Properties:
      GroupDescription: grp Security Group for default network
      Tags:
        - Key: com.docker.compose.project
          Value: grp
        - Key: com.docker.compose.network
          Value: grp_default
      VpcId: vpc-e57f9198
    Type: AWS::EC2::SecurityGroup
  DefaultNetworkIngress:
    Properties:
      Description: Allow communication within network default
      GroupId:
        Ref: DefaultNetwork
      IpProtocol: "-1"
      SourceSecurityGroupId:
        Ref: DefaultNetwork
    Type: AWS::EC2::SecurityGroupIngress
  Grouparoobackend3000Ingress:
    Properties:
      CidrIp: 0.0.0.0/0
      Description: grouparoo-web:3000/ on grouparoo_backend network
      FromPort: 3000
      GroupId:
        Ref: GrouparoobackendNetwork
      IpProtocol: "-1"
      ToPort: 3000
    Type: AWS::EC2::SecurityGroupIngress
  GrouparoobackendNetwork:
    Properties:
      GroupDescription: grp Security Group for grouparoo_backend network
      Tags:
        - Key: com.docker.compose.project
          Value: grp
        - Key: com.docker.compose.network
          Value: grp_grouparoo_backend
      VpcId: vpc-e57f9198
    Type: AWS::EC2::SecurityGroup
  GrouparoobackendNetworkIngress:
    Properties:
      Description: Allow communication within network grouparoo_backend
      GroupId:
        Ref: GrouparoobackendNetwork
      IpProtocol: "-1"
      SourceSecurityGroupId:
        Ref: GrouparoobackendNetwork
    Type: AWS::EC2::SecurityGroupIngress
  Grouparoofrontend3000Ingress:
    Properties:
      CidrIp: 0.0.0.0/0
      Description: grouparoo-web:3000/ on grouparoo_frontend network
      FromPort: 3000
      GroupId:
        Ref: GrouparoofrontendNetwork
      IpProtocol: "-1"
      ToPort: 3000
    Type: AWS::EC2::SecurityGroupIngress
  GrouparoofrontendNetwork:
    Properties:
      GroupDescription: grp Security Group for grouparoo_frontend network
      Tags:
        - Key: com.docker.compose.project
          Value: grp
        - Key: com.docker.compose.network
          Value: grp_grouparoo_frontend
      VpcId: vpc-e57f9198
    Type: AWS::EC2::SecurityGroup
  GrouparoofrontendNetworkIngress:
    Properties:
      Description: Allow communication within network grouparoo_frontend
      GroupId:
        Ref: GrouparoofrontendNetwork
      IpProtocol: "-1"
      SourceSecurityGroupId:
        Ref: GrouparoofrontendNetwork
    Type: AWS::EC2::SecurityGroupIngress
  Grouparooweb3000Listener:
    Properties:
      DefaultActions:
        - ForwardConfig:
            TargetGroups:
              - TargetGroupArn:
                  Ref: Grouparooweb3000TargetGroup
          Type: forward
      LoadBalancerArn:
        Ref: LoadBalancer
      Port: 3000
      Protocol: HTTP
    Type: AWS::ElasticLoadBalancingV2::Listener
  Grouparooweb3000TargetGroup:
    Properties:
      Port: 3000
      Protocol: HTTP
      Tags:
        - Key: com.docker.compose.project
          Value: grp
      TargetType: ip
      VpcId: vpc-e57f9198
    Type: AWS::ElasticLoadBalancingV2::TargetGroup
  GrouparoowebService:
    DependsOn:
      - Grouparooweb3000Listener
      - DbService
      - RedisService
    Properties:
      Cluster:
        Fn::GetAtt:
          - Cluster
          - Arn
      DeploymentConfiguration:
        MaximumPercent: 200
        MinimumHealthyPercent: 100
      DeploymentController:
        Type: ECS
      DesiredCount: 1
      LaunchType: FARGATE
      LoadBalancers:
        - ContainerName: grouparoo-web
          ContainerPort: 3000
          TargetGroupArn:
            Ref: Grouparooweb3000TargetGroup
      NetworkConfiguration:
        AwsvpcConfiguration:
          AssignPublicIp: ENABLED
          SecurityGroups:
            - Ref: GrouparoobackendNetwork
            - Ref: GrouparoofrontendNetwork
          Subnets:
            - subnet-f55b8993
            - subnet-1aa07e45
            - subnet-93e931b2
            - subnet-613ddc50
            - subnet-6075182d
            - subnet-38fa6d36
      PlatformVersion: 1.4.0
      PropagateTags: SERVICE
      SchedulingStrategy: REPLICA
      ServiceRegistries:
        - RegistryArn:
            Fn::GetAtt:
              - GrouparoowebServiceDiscoveryEntry
              - Arn
      Tags:
        - Key: com.docker.compose.project
          Value: grp
        - Key: com.docker.compose.service
          Value: grouparoo-web
      TaskDefinition:
        Ref: GrouparoowebTaskDefinition
    Type: AWS::ECS::Service
  GrouparoowebServiceDiscoveryEntry:
    Properties:
      Description: '"grouparoo-web" service discovery entry in Cloud Map'
      DnsConfig:
        DnsRecords:
          - TTL: 60
            Type: A
        RoutingPolicy: MULTIVALUE
      HealthCheckCustomConfig:
        FailureThreshold: 1
      Name: grouparoo-web
      NamespaceId:
        Ref: CloudMap
    Type: AWS::ServiceDiscovery::Service
  GrouparoowebTaskDefinition:
    Properties:
      ContainerDefinitions:
        - Command:
            - us-east-1.compute.internal
            - grp.local
          Essential: false
          Image: docker/ecs-searchdomain-sidecar:1.0
          LogConfiguration:
            LogDriver: awslogs
            Options:
              awslogs-group:
                Ref: LogGroup
              awslogs-region:
                Ref: AWS::Region
              awslogs-stream-prefix: grp
          Name: Grouparooweb_ResolvConf_InitContainer
        - DependsOn:
            - Condition: SUCCESS
              ContainerName: Grouparooweb_ResolvConf_InitContainer
          Environment:
            - Name: DATABASE_URL
              Value: postgresql://postgres:password@db:5432/grouparoo_docker
            - Name: PORT
              Value: "3000"
            - Name: REDIS_URL
              Value: redis://redis:6379/0
            - Name: SERVER_TOKEN
              Value: default-server-token
            - Name: WEB_SERVER
              Value: "true"
            - Name: WORKERS
              Value: "0"
          Essential: true
          Image: docker.io/kmbeck428/docker-grouparoo-test:latest@sha256:ac8d302d999a3fc95ccacca4d657680e927bb42c513a4c0967c77a314a313bd7
          LinuxParameters: {}
          LogConfiguration:
            LogDriver: awslogs
            Options:
              awslogs-group:
                Ref: LogGroup
              awslogs-region:
                Ref: AWS::Region
              awslogs-stream-prefix: grp
          Name: grouparoo-web
          PortMappings:
            - ContainerPort: 3000
              HostPort: 3000
      Cpu: "256"
      ExecutionRoleArn:
        Ref: GrouparoowebTaskExecutionRole
      Family: grp-grouparoo-web
      Memory: "512"
      NetworkMode: awsvpc
      RequiresCompatibilities:
        - FARGATE
    Type: AWS::ECS::TaskDefinition
  GrouparoowebTaskExecutionRole:
    Properties:
      AssumeRolePolicyDocument:
        Statement:
          - Action:
              - sts:AssumeRole
            Condition: {}
            Effect: Allow
            Principal:
              Service: ecs-tasks.amazonaws.com
        Version: 2012-10-17
      ManagedPolicyArns:
        - arn:aws:iam::aws:policy/service-role/AmazonECSTaskExecutionRolePolicy
        - arn:aws:iam::aws:policy/AmazonEC2ContainerRegistryReadOnly
      Tags:
        - Key: com.docker.compose.project
          Value: grp
        - Key: com.docker.compose.service
          Value: grouparoo-web
    Type: AWS::IAM::Role
  GrouparooworkerService:
    DependsOn:
      - DbService
      - RedisService
      - GrouparoowebService
    Properties:
      Cluster:
        Fn::GetAtt:
          - Cluster
          - Arn
      DeploymentConfiguration:
        MaximumPercent: 200
        MinimumHealthyPercent: 100
      DeploymentController:
        Type: ECS
      DesiredCount: 1
      LaunchType: FARGATE
      NetworkConfiguration:
        AwsvpcConfiguration:
          AssignPublicIp: ENABLED
          SecurityGroups:
            - Ref: GrouparoofrontendNetwork
            - Ref: GrouparoobackendNetwork
          Subnets:
            - subnet-f55b8993
            - subnet-1aa07e45
            - subnet-93e931b2
            - subnet-613ddc50
            - subnet-6075182d
            - subnet-38fa6d36
      PlatformVersion: 1.4.0
      PropagateTags: SERVICE
      SchedulingStrategy: REPLICA
      ServiceRegistries:
        - RegistryArn:
            Fn::GetAtt:
              - GrouparooworkerServiceDiscoveryEntry
              - Arn
      Tags:
        - Key: com.docker.compose.project
          Value: grp
        - Key: com.docker.compose.service
          Value: grouparoo-worker
      TaskDefinition:
        Ref: GrouparooworkerTaskDefinition
    Type: AWS::ECS::Service
  GrouparooworkerServiceDiscoveryEntry:
    Properties:
      Description: '"grouparoo-worker" service discovery entry in Cloud Map'
      DnsConfig:
        DnsRecords:
          - TTL: 60
            Type: A
        RoutingPolicy: MULTIVALUE
      HealthCheckCustomConfig:
        FailureThreshold: 1
      Name: grouparoo-worker
      NamespaceId:
        Ref: CloudMap
    Type: AWS::ServiceDiscovery::Service
  GrouparooworkerTaskDefinition:
    Properties:
      ContainerDefinitions:
        - Command:
            - us-east-1.compute.internal
            - grp.local
          Essential: false
          Image: docker/ecs-searchdomain-sidecar:1.0
          LogConfiguration:
            LogDriver: awslogs
            Options:
              awslogs-group:
                Ref: LogGroup
              awslogs-region:
                Ref: AWS::Region
              awslogs-stream-prefix: grp
          Name: Grouparooworker_ResolvConf_InitContainer
        - DependsOn:
            - Condition: SUCCESS
              ContainerName: Grouparooworker_ResolvConf_InitContainer
          Environment:
            - Name: DATABASE_URL
              Value: postgresql://postgres:password@db:5432/grouparoo_docker
            - Name: REDIS_URL
              Value: redis://redis:6379/0
            - Name: SERVER_TOKEN
              Value: default-server-token
            - Name: WEB_SERVER
              Value: "false"
            - Name: WORKERS
              Value: "10"
          Essential: true
          Image: docker.io/kmbeck428/docker-grouparoo-test:latest@sha256:ac8d302d999a3fc95ccacca4d657680e927bb42c513a4c0967c77a314a313bd7
          LinuxParameters: {}
          LogConfiguration:
            LogDriver: awslogs
            Options:
              awslogs-group:
                Ref: LogGroup
              awslogs-region:
                Ref: AWS::Region
              awslogs-stream-prefix: grp
          Name: grouparoo-worker
      Cpu: "256"
      ExecutionRoleArn:
        Ref: GrouparooworkerTaskExecutionRole
      Family: grp-grouparoo-worker
      Memory: "512"
      NetworkMode: awsvpc
      RequiresCompatibilities:
        - FARGATE
    Type: AWS::ECS::TaskDefinition
  GrouparooworkerTaskExecutionRole:
    Properties:
      AssumeRolePolicyDocument:
        Statement:
          - Action:
              - sts:AssumeRole
            Condition: {}
            Effect: Allow
            Principal:
              Service: ecs-tasks.amazonaws.com
        Version: 2012-10-17
      ManagedPolicyArns:
        - arn:aws:iam::aws:policy/service-role/AmazonECSTaskExecutionRolePolicy
        - arn:aws:iam::aws:policy/AmazonEC2ContainerRegistryReadOnly
      Tags:
        - Key: com.docker.compose.project
          Value: grp
        - Key: com.docker.compose.service
          Value: grouparoo-worker
    Type: AWS::IAM::Role
  LoadBalancer:
    Properties:
      Scheme: internet-facing
      SecurityGroups:
        - Ref: GrouparoofrontendNetwork
        - Ref: GrouparoobackendNetwork
        - Ref: DefaultNetwork
      Subnets:
        - subnet-f55b8993
        - subnet-1aa07e45
        - subnet-93e931b2
        - subnet-613ddc50
        - subnet-6075182d
        - subnet-38fa6d36
      Tags:
        - Key: com.docker.compose.project
          Value: grp
      Type: application
    Type: AWS::ElasticLoadBalancingV2::LoadBalancer
  LogGroup:
    Properties:
      LogGroupName: /docker-compose/grp
    Type: AWS::Logs::LogGroup
  PostgresdataAccessPoint:
    Properties:
      AccessPointTags:
        - Key: com.docker.compose.project
          Value: grp
        - Key: com.docker.compose.volume
          Value: postgres-data
        - Key: Name
          Value: grp_postgres-data
      FileSystemId: fs-807d0c34
    Type: AWS::EFS::AccessPoint
  PostgresdataNFSMountTargetOnSubnet1aa07e45:
    Properties:
      FileSystemId: fs-807d0c34
      SecurityGroups:
        - Ref: GrouparoobackendNetwork
        - Ref: DefaultNetwork
        - Ref: GrouparoofrontendNetwork
      SubnetId: subnet-1aa07e45
    Type: AWS::EFS::MountTarget
  PostgresdataNFSMountTargetOnSubnet38fa6d36:
    Properties:
      FileSystemId: fs-807d0c34
      SecurityGroups:
        - Ref: GrouparoofrontendNetwork
        - Ref: GrouparoobackendNetwork
        - Ref: DefaultNetwork
      SubnetId: subnet-38fa6d36
    Type: AWS::EFS::MountTarget
  PostgresdataNFSMountTargetOnSubnet93e931b2:
    Properties:
      FileSystemId: fs-807d0c34
      SecurityGroups:
        - Ref: GrouparoofrontendNetwork
        - Ref: GrouparoobackendNetwork
        - Ref: DefaultNetwork
      SubnetId: subnet-93e931b2
    Type: AWS::EFS::MountTarget
  PostgresdataNFSMountTargetOnSubnet613ddc50:
    Properties:
      FileSystemId: fs-807d0c34
      SecurityGroups:
        - Ref: GrouparoobackendNetwork
        - Ref: DefaultNetwork
        - Ref: GrouparoofrontendNetwork
      SubnetId: subnet-613ddc50
    Type: AWS::EFS::MountTarget
  PostgresdataNFSMountTargetOnSubnet6075182d:
    Properties:
      FileSystemId: fs-807d0c34
      SecurityGroups:
        - Ref: GrouparoofrontendNetwork
        - Ref: GrouparoobackendNetwork
        - Ref: DefaultNetwork
      SubnetId: subnet-6075182d
    Type: AWS::EFS::MountTarget
  PostgresdataNFSMountTargetOnSubnetf55b8993:
    Properties:
      FileSystemId: fs-807d0c34
      SecurityGroups:
        - Ref: GrouparoofrontendNetwork
        - Ref: GrouparoobackendNetwork
        - Ref: DefaultNetwork
      SubnetId: subnet-f55b8993
    Type: AWS::EFS::MountTarget
  RedisService:
    Properties:
      Cluster:
        Fn::GetAtt:
          - Cluster
          - Arn
      DeploymentConfiguration:
        MaximumPercent: 200
        MinimumHealthyPercent: 100
      DeploymentController:
        Type: ECS
      DesiredCount: 1
      LaunchType: FARGATE
      NetworkConfiguration:
        AwsvpcConfiguration:
          AssignPublicIp: ENABLED
          SecurityGroups:
            - Ref: GrouparoobackendNetwork
          Subnets:
            - subnet-f55b8993
            - subnet-1aa07e45
            - subnet-93e931b2
            - subnet-613ddc50
            - subnet-6075182d
            - subnet-38fa6d36
      PlatformVersion: 1.4.0
      PropagateTags: SERVICE
      SchedulingStrategy: REPLICA
      ServiceRegistries:
        - RegistryArn:
            Fn::GetAtt:
              - RedisServiceDiscoveryEntry
              - Arn
      Tags:
        - Key: com.docker.compose.project
          Value: grp
        - Key: com.docker.compose.service
          Value: redis
      TaskDefinition:
        Ref: RedisTaskDefinition
    Type: AWS::ECS::Service
  RedisServiceDiscoveryEntry:
    Properties:
      Description: '"redis" service discovery entry in Cloud Map'
      DnsConfig:
        DnsRecords:
          - TTL: 60
            Type: A
        RoutingPolicy: MULTIVALUE
      HealthCheckCustomConfig:
        FailureThreshold: 1
      Name: redis
      NamespaceId:
        Ref: CloudMap
    Type: AWS::ServiceDiscovery::Service
  RedisTaskDefinition:
    Properties:
      ContainerDefinitions:
        - Command:
            - us-east-1.compute.internal
            - grp.local
          Essential: false
          Image: docker/ecs-searchdomain-sidecar:1.0
          LogConfiguration:
            LogDriver: awslogs
            Options:
              awslogs-group:
                Ref: LogGroup
              awslogs-region:
                Ref: AWS::Region
              awslogs-stream-prefix: grp
          Name: Redis_ResolvConf_InitContainer
        - DependsOn:
            - Condition: SUCCESS
              ContainerName: Redis_ResolvConf_InitContainer
          Essential: true
          Image: docker.io/library/redis:latest@sha256:b6a9fc3535388a6fc04f3bdb83fb4d9d0b4ffd85e7609a6ff2f0f731427823e3
          LinuxParameters: {}
          LogConfiguration:
            LogDriver: awslogs
            Options:
              awslogs-group:
                Ref: LogGroup
              awslogs-region:
                Ref: AWS::Region
              awslogs-stream-prefix: grp
          Name: redis
      Cpu: "256"
      ExecutionRoleArn:
        Ref: RedisTaskExecutionRole
      Family: grp-redis
      Memory: "512"
      NetworkMode: awsvpc
      RequiresCompatibilities:
        - FARGATE
    Type: AWS::ECS::TaskDefinition
  RedisTaskExecutionRole:
    Properties:
      AssumeRolePolicyDocument:
        Statement:
          - Action:
              - sts:AssumeRole
            Condition: {}
            Effect: Allow
            Principal:
              Service: ecs-tasks.amazonaws.com
        Version: 2012-10-17
      ManagedPolicyArns:
        - arn:aws:iam::aws:policy/service-role/AmazonECSTaskExecutionRolePolicy
        - arn:aws:iam::aws:policy/AmazonEC2ContainerRegistryReadOnly
      Tags:
        - Key: com.docker.compose.project
          Value: grp
        - Key: com.docker.compose.service
          Value: redis
    Type: AWS::IAM::Role
